option(ENABLE_GTEST "Enable GTEST for unit testing." ON)
if(ENABLE_GTEST)
    enable_testing()
    find_package(GTest REQUIRED)
    file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "*.cpp" "*.cu")
    if(ENABLE_CUDA)
        list(FILTER SOURCES EXCLUDE REGEX ".*\\.cpp$")
        set(CMAKE_CUDA_STANDARD 17)
        set(CMAKE_CUDA_STANDARD_REQUIRED ON)
        include(CheckLanguage)
        check_language(CUDA)
        if (CMAKE_CUDA_COMPILER)
            enable_language(CUDA)
        else ()
            message(WARNING "CUDA not found: GPU features won't be available.")
        endif ()
    elseif(ENABLE_VECTORIZATION AND ENABLE_VECTORIZATION_WITH_SIMD)
        list(FILTER SOURCES EXCLUDE REGEX ".*\\.cu$")
    else()
        list(FILTER SOURCES EXCLUDE REGEX ".*\\.")
    endif()
foreach(file ${SOURCES})
        message(${file})
        get_filename_component(filename ${file} NAME_WLE)
        display_header("Creating Makefile of ${filename}")

        get_filename_component(filename ${file} NAME_WLE)

        add_executable(${filename} ${file})
        target_link_libraries(${filename} ${META_PROJECT_NAME} GTest::gtest GTest::gtest_main)

        add_test(NAME ${filename} COMMAND ${filename})
    endforeach()
endif()
